--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -137,6 +137,7 @@
 /extensions/microsoft-edge                           @KartikKumarSahoo @bromanko
 /extensions/mldocs                                   @sadanand-singh
 /extensions/moji                                     @Kasper4649
+/extensions/monday                                   @freak4pc
 /extensions/music                                    @splash-cli
 /extensions/must                                     @eggsy
 /extensions/myip                                     @kkange
