--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -156,6 +156,7 @@
 /extensions/pipe-commands                            @pomdtr
 /extensions/pipedrive                                @stephendolan
 /extensions/ploi                                     @Cannonb4ll
+/extensions/pocket                                   @vimtor
 /extensions/pokedex                                  @anhthang
 /extensions/polished                                 @LekoArts
 /extensions/port-manager                             @lucaschultz
