--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -4,7 +4,7 @@
 /extensions/8ball                                    @Gitsack
 /extensions/airport                                  @siddharthsharma94
 /extensions/algolia                                  @valentindotxyz
-/extensions/amazon-aws                               @victor-falcon @Hodglim
+/extensions/amazon-aws                               @victor-falcon @Hodglim @JonathanWbn
 /extensions/api-icon-list                            @PitNikola
 /extensions/apple-notes                              @tumispro @ron-myers
 /extensions/atomic                                   @joepio
