--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -120,6 +120,7 @@
 /extensions/kaalam                                   @heertheeswaran
 /extensions/kagi-search                              @fearoffish
 /extensions/kaomoji-search                           @allexks
+/extensions/karabiner-profile-switcher               @lucaschultz
 /extensions/keepassxc                                @zkytech
 /extensions/keyboard-maestro                         @eluce2
 /extensions/kill-process                             @rolandleth
