--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -176,6 +176,7 @@
 /extensions/random-email                             @rkjaer
 /extensions/ray-so                                   @gt-codes @RSO
 /extensions/rebrandly                                @grikomsn
+/extensions/reddit-search                            @ewlcheng
 /extensions/remove-background                        @maantje
 /extensions/render                                   @Destiner
 /extensions/ricescore                                @tonka3000
