--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -96,6 +96,7 @@
 /extensions/google-chrome-profiles                   @frouo
 /extensions/google-cloud-platform-search             @klaa97
 /extensions/google-maps-search                       @ratoru
+/extensions/google-meet                              @vitoorgomes
 /extensions/google-search                            @mblode
 /extensions/google-translate                         @ospfranco
 /extensions/google-trends                            @kkange
