--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -145,6 +145,7 @@
 /extensions/must                                     @eggsy
 /extensions/myip                                     @kkange
 /extensions/netlify                                  @Destiner
+/extensions/node-js-evaluate                         @selfish
 /extensions/nos-news                                 @Joran-Dob
 /extensions/notion                                   @HenriChabrand
 /extensions/nsis-reference                           @idleberg
