--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -128,6 +128,7 @@
 /extensions/kill-process                             @rolandleth
 /extensions/kinopoisk                                @mattisssa
 /extensions/kubectx                                  @oktaysenkan
+/extensions/laracasts                                @danyelkeddah
 /extensions/laravel-docs                             @indykoning @indykoning @indykoning
 /extensions/laravel-forge                            @KevinBatdorf
 /extensions/laravel-livewire                         @tafhyseni
