--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -179,6 +179,7 @@
 /extensions/random-data-generator                    @loris
 /extensions/random-email                             @rkjaer
 /extensions/ray-so                                   @gt-codes @RSO
+/extensions/raynab                                   @gogocharli
 /extensions/rebrandly                                @grikomsn
 /extensions/reddit-search                            @ewlcheng
 /extensions/remove-background                        @maantje
