--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -4,6 +4,7 @@
 /extensions/8ball                                    @Gitsack
 /extensions/airport                                  @siddharthsharma94
 /extensions/algolia                                  @valentindotxyz
+/extensions/aliyun-oss                               @yangxyo
 /extensions/amazon-aws                               @victor-falcon @Hodglim @JonathanWbn
 /extensions/android-adb-input                        @STAR-ZERO
 /extensions/api-icon-list                            @PitNikola
