--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -229,6 +229,7 @@
 /extensions/toolbox                                  @kkange
 /extensions/tower                                    @tdwesten
 /extensions/transmission                             @FezVrasta
+/extensions/trello                                   @ChrisChinchilla
 /extensions/tunnelblick                              @SamuelNitsche
 /extensions/tuple                                    @inxilpro
 /extensions/twitch                                   @dieserRobin
