[Bitwarden Vault] Update bitwarden.png with Raycast template (#1044)
* Update bitwarden.png with Raycast template

* Update contributors

--- a/extensions/bitwarden/package.json
+++ b/extensions/bitwarden/package.json
@@ -5,6 +5,9 @@
   "description": "Access a Bitwarden account. Requires installing the Bitwarden CLI.",
   "icon": "bitwarden.png",
   "author": "pomdtr",
+  "contributors": [
+    "daniel-stoneuk"
+  ],
   "license": "MIT",
   "keywords": [
     "bitwarden",
