--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -246,7 +246,7 @@
 /extensions/vault                                    @ricoberger
 /extensions/vercast                                  @gleich
 /extensions/visual-studio-code-project-manager       @MarkusLanger
-/extensions/visual-studio-code-recent-projects       @thomaspaulmann
+/extensions/visual-studio-code-recent-projects       @thomaspaulmann @iainsimmons
 /extensions/weather                                  @tonka3000
 /extensions/whatsapp                                 @vimtor
 /extensions/wikipedia                                @vimtor
