--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -45,7 +45,7 @@
 /extensions/cloudflare                               @Destiner @niklaswa
 /extensions/coffee                                   @mooxl
 /extensions/coinbase-pro                             @farisaziz12
-/extensions/coingecko                                @Destiner
+/extensions/coingecko                                @Destiner @mike182uk
 /extensions/coinmarketcap-crypto-crawler             @moojing
 /extensions/commitlint                               @lardissone
 /extensions/confluence-search                        @daviddkkim
