--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -50,7 +50,7 @@
 /extensions/commitlint                               @lardissone
 /extensions/confluence-search                        @daviddkkim
 /extensions/connect-to-vpn                           @sato11
-/extensions/consoledev                               @splash-cli
+/extensions/consoledev                               @Rawnly
 /extensions/conventional-comments                    @krzysztofzuraw
 /extensions/copy-gcp-icons                           @pomdtr
 /extensions/cpf-cnpj-generator                       @gstvds
@@ -69,7 +69,7 @@
 /extensions/displayplacer                            @eluce2
 /extensions/docker                                   @priithaamer
 /extensions/dockerhub                                @k8scat
-/extensions/domainr                                  @splash-cli
+/extensions/domainr                                  @Rawnly
 /extensions/doppler-share-secrets                    @thomaspaulmann
 /extensions/elgato-key-light                         @thomaspaulmann
 /extensions/elm-search                               @NeoVier
@@ -145,7 +145,7 @@
 /extensions/mldocs                                   @sadanand-singh
 /extensions/moji                                     @Kasper4649
 /extensions/monday                                   @freak4pc
-/extensions/music                                    @splash-cli
+/extensions/music                                    @Rawnly
 /extensions/must                                     @eggsy
 /extensions/myip                                     @kkange
 /extensions/netlify                                  @Destiner
@@ -236,6 +236,7 @@
 /extensions/tuple                                    @inxilpro
 /extensions/twitch                                   @dieserRobin
 /extensions/twitter                                  @tonka3000
+/extensions/twitter-trendscast                       @pradeepb28
 /extensions/two-factor-authentication-code-generator @cjdenio
 /extensions/ulysses                                  @praveenjuge
 /extensions/unicode-symbols                          @mmazzarolo
