--- a/examples/todo-list/package.json
+++ b/examples/todo-list/package.json
@@ -24,6 +24,8 @@
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-react": "^7.29.3",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "react-devtools": "^4.19.2",
     "typescript": "^4.4.3"
   },
