Add List.Item.Detail GIF preview and Default Action settings (#1055)
* Add List.Item.Detail GIF preview setting

Enables users to enable a GIF Preview that uses the brand new List.Item.Detail setting. It's currently disabled by default since the markdown renderer doesn't render animations. Once animations start working, this setting will be enabled by default

* Return smaller gif preview for tenor

* Strip query params when copying gif url to clipboard

* Remove old manual gif decoder and GifDetails component

* Fix action shortcuts

Secondary action already has its own shortcut, so no need to provide one

* Fix lint issues

* Remove custom types for gif-frames

* Add preference for customizing a default action on a Gif search result

* Add gif service attribution

As required by their terms of service

* Add docs about default action preference

--- a/extensions/gif-search/package.json
+++ b/extensions/gif-search/package.json
@@ -40,12 +40,40 @@
       ]
     }
   ],
+  "preferences": [
+    {
+      "name": "showGifPreview",
+      "type": "checkbox",
+      "required": false,
+      "label": "Show GIF Preview",
+      "description": "Shows a large preview of the selected gif in search results."
+    },
+    {
+      "name": "defaultAction",
+      "type": "dropdown",
+      "required": false,
+      "title": "Default Action",
+      "description": "Customize what happens when hitting ENTER on a Gif",
+      "data": [
+        {
+          "title": "Open in Browser",
+          "value": "openInBrowser"
+        },
+        {
+          "title": "Copy GIF URL to Clipboard",
+          "value": "copyGifUrl"
+        },
+        {
+          "title": "Copy Page URL to Clipboard",
+          "value": "copyPageUrl"
+        }
+      ]
+    }
+  ],
   "dependencies": {
     "@giphy/js-fetch-api": "^4.1.2",
-    "@raycast/api": "^1.29.1",
-    "gif-frames": "^1.0.1",
-    "node-fetch": "^3.2.1",
-    "usehooks-ts": "^2.4.2"
+    "@raycast/api": "^1.30.0",
+    "node-fetch": "^3.2.1"
   },
   "devDependencies": {
     "@types/node": "~16.10.0",
