--- a/extensions/reddit-search/package.json
+++ b/extensions/reddit-search/package.json
@@ -10,7 +10,7 @@
     {
       "name": "index",
       "title": "Search Reddit",
-      "description": "Searches Reddit and lists the results with the option to sort, show more, or show the results on Reddit",
+      "description": "Searches Reddit and lists the results with the option to sort, show more, or show the results on Reddit.",
       "mode": "view"
     }
   ],
@@ -25,19 +25,19 @@
     }
   ],
   "dependencies": {
-    "@raycast/api": "^1.28.0",
-    "node-fetch": "^3.2.0"
+    "@raycast/api": "^1.30.0",
+    "node-fetch": "^3.2.2"
   },
   "devDependencies": {
     "@types/node": "~16.10.0",
-    "@types/react": "^17.0.28",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
+    "@types/react": "^17.0.39",
+    "@typescript-eslint/eslint-plugin": "^5.14.0",
+    "@typescript-eslint/parser": "^5.14.0",
     "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-prettier": "^8.5.0",
     "prettier": "^2.5.1",
-    "react-devtools": "^4.19.2",
-    "typescript": "^4.4.3"
+    "react-devtools": "^4.23.0",
+    "typescript": "^4.6.2"
   },
   "scripts": {
     "build": "ray build -e dist",
