--- a/extensions/gitignore/package.json
+++ b/extensions/gitignore/package.json
@@ -14,8 +14,19 @@
       "mode": "view"
     }
   ],
+  "preferences": [
+    {
+      "name": "listdetail",
+      "type": "checkbox",
+      "title": "Preview",
+      "description": "Disable file preview in gitignore list.",
+      "label": "Display Preview in List",
+      "default": true,
+      "required": false
+    }
+  ],
   "dependencies": {
-    "@raycast/api": "^1.28.0",
+    "@raycast/api": "^1.30.1",
     "node-fetch": "^3.2.0"
   },
   "devDependencies": {
