--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -128,6 +128,7 @@
 /extensions/kaomoji-search                           @allexks
 /extensions/karabiner-profile-switcher               @lucaschultz
 /extensions/keepassxc                                @zkytech
+/extensions/keyboard-layout-switcher                 @lucaschultz
 /extensions/keyboard-maestro                         @eluce2
 /extensions/kill-process                             @rolandleth
 /extensions/kinopoisk                                @mattisssa
