--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -204,6 +204,7 @@
 /extensions/search-rubygems                          @aleks
 /extensions/semantic-scholar                         @blainerothrock
 /extensions/send-to-flomo                            @ahonn
+/extensions/sentry                                   @thomaspaulmann
 /extensions/sf-symbols-search                        @peteschaffner
 /extensions/shopify-developer-changelog              @sandypockets
 /extensions/simpread                                 @Kenshin
