--- a/extensions/bitwarden/package.json
+++ b/extensions/bitwarden/package.json
@@ -6,7 +6,8 @@
   "icon": "bitwarden.png",
   "author": "pomdtr",
   "contributors": [
-    "daniel-stoneuk"
+    "daniel-stoneuk",
+    "jomifepe"
   ],
   "license": "MIT",
   "keywords": [
@@ -49,6 +50,13 @@
       "subtitle": "Bitwarden",
       "description": "Lock the vault.",
       "mode": "no-view"
+    },
+    {
+      "name": "generate-password",
+      "title": "Generate Password",
+      "subtitle": "Bitwarden",
+      "description": "Generate a password using Bitwarden.",
+      "mode": "view"
     }
   ],
   "preferences": [
@@ -87,22 +95,24 @@
     }
   ],
   "dependencies": {
-    "@raycast/api": "^1.27.1",
+    "@raycast/api": "^1.30.2",
     "execa": "^5.1.1",
+    "throttle-debounce": "^3.0.1",
     "treeify": "^1.1.0"
   },
   "devDependencies": {
-    "@types/treeify": "^1.0.0",
     "@types/node": "~16.10.0",
     "@types/react": "^17.0.28",
+    "@types/throttle-debounce": "^2.1.0",
+    "@types/treeify": "^1.0.0",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.5.1",
     "react-devtools": "^4.19.2",
-    "typescript": "^4.4.3",
-    "@types/treeify": "^1.0.0"
+    "typescript": "^4.4.3"
   },
   "scripts": {
     "build": "ray build -e dist",
