--- a/extensions/audio-device/package.json
+++ b/extensions/audio-device/package.json
@@ -5,7 +5,8 @@
   "icon": "command-icon.png",
   "author": "benvp",
   "contributors": [
-    "mathieudutour"
+    "mathieudutour",
+    "mike182uk"
   ],
   "license": "MIT",
   "commands": [
@@ -25,9 +26,10 @@
     },
     {
       "name": "favourite",
-      "title": "Set Audio Output Device to Favourite One",
-      "description": "Set the active audio output device to the one specified in the preferences",
-      "mode": "view"
+      "title": "Set Output Device to Favourite",
+      "subtitle": "Audio Device",
+      "description": "Sets the active audio output device to the favourite specified in the preferences",
+      "mode": "no-view"
     }
   ],
   "preferences": [
