--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -10,7 +10,7 @@
 /extensions/api-icon-list                            @PitNikola
 /extensions/apple-notes                              @tumispro @ron-myers
 /extensions/atomic                                   @joepio
-/extensions/audio-device                             @benvp @mathieudutour
+/extensions/audio-device                             @benvp @mathieudutour @mike182uk
 /extensions/authy                                    @guga4ka @lukekarrys
 /extensions/banca-d-italia-currency-converter        @FezVrasta
 /extensions/base64                                   @DanielSinclair
