add FezVrasta to audio-device contributors (#1103)

--- a/extensions/audio-device/package.json
+++ b/extensions/audio-device/package.json
@@ -6,7 +6,8 @@
   "author": "benvp",
   "contributors": [
     "mathieudutour",
-    "mike182uk"
+    "mike182uk",
+    "FezVrasta"
   ],
   "license": "MIT",
   "commands": [
