--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -220,6 +220,7 @@
 /extensions/spotify-controls                         @thomaspaulmann @altrdev @ron-myers
 /extensions/spotify-player                           @mattisssa
 /extensions/stackoverflow                            @sadanand-singh
+/extensions/stripe                                   @pradeepb28
 /extensions/surge                                    @ysj151215
 /extensions/swift-evolution                          @BProg
 /extensions/switchhosts                              @tiancheng92
