Add screenshots, categories and changelogs for my extensions (#1087)
* Add categories for vimtor extensions

* Add screenshots for vimtor extensions

* Add changelogs for vimtor extensions

* Rename changelog.md to CHANGELOG.md

Co-authored-by: mattisssa <kolevanartem@gmail.com>

--- a/extensions/pocket/package.json
+++ b/extensions/pocket/package.json
@@ -42,6 +42,10 @@
       ]
     }
   ],
+  "categories": [
+    "Applications",
+    "Productivity"
+  ],
   "commands": [
     {
       "name": "search",
