--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -153,6 +153,7 @@
 /extensions/music                                    @Rawnly
 /extensions/must                                     @eggsy
 /extensions/myip                                     @kkange
+/extensions/nativebase-docs                          @ShubhamVerma1811
 /extensions/netlify                                  @Destiner
 /extensions/node-js-evaluate                         @selfish
 /extensions/nos-news                                 @Joran-Dob
