--- a/extensions/git-repos/package.json
+++ b/extensions/git-repos/package.json
@@ -104,8 +104,12 @@
       "default": ""
     }
   ],
+  "categories": [
+    "Developer Tools",
+    "Productivity"
+  ],
   "dependencies": {
-    "@raycast/api": "^1.28.0",
+    "@raycast/api": "^1.30.2",
     "node-fetch": "^3.0.0",
     "parse-git-config": "^3.0.0",
     "parse-github-url": "^1.0.2"
