--- a/extensions/json-format/package.json
+++ b/extensions/json-format/package.json
@@ -5,6 +5,7 @@
   "description": "Formats a JSON file with a selected indentation.",
   "icon": "command-icon.png",
   "author": "destiner",
+  "categories": ["Data", "Developer Tools"],
   "license": "MIT",
   "commands": [
     {
