--- a/extensions/bitwarden/package.json
+++ b/extensions/bitwarden/package.json
@@ -117,6 +117,7 @@
   "scripts": {
     "build": "ray build -e dist",
     "dev": "ray develop",
+    "fix-lint": "ray lint --fix",
     "lint": "ray lint"
   }
 }
