[Pokédex] use svg icon, update type filter (#1088)
* feat: use svg icon, update type filter

* fix: add show/hide preview action, changelog

* chore: svg move damage icon

* fix: move effect change

* fix: surprise me detail

* feat: add ability preview

* chore: update changelog, following the documentation

* chore: add metadata

* fix: 6 images in total in metadata

--- a/extensions/pokedex/package.json
+++ b/extensions/pokedex/package.json
@@ -6,6 +6,7 @@
   "icon": "icon.png",
   "author": "anhthang",
   "license": "MIT",
+  "categories": ["Fun", "Other"],
   "commands": [
     {
       "name": "pokemon",
