--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -192,7 +192,7 @@
 /extensions/raynab                                   @gogocharli
 /extensions/rebrandly                                @grikomsn
 /extensions/reddit-search                            @ewlcheng
-/extensions/remove-background                        @maantje
+/extensions/remove-background                        @maantje @FezVrasta
 /extensions/render                                   @Destiner
 /extensions/ricescore                                @tonka3000
 /extensions/roblox-games                             @TayIorRobinson
