--- a/extensions/transmission/package.json
+++ b/extensions/transmission/package.json
@@ -25,6 +25,13 @@
       "subtitle": "Transmission",
       "description": "Add a new torrent from a magnet link",
       "mode": "view"
+    },
+    {
+      "name": "openTransmissionWebInterface",
+      "title": "Open Transmission Web Interface",
+      "subtitle": "Transmission",
+      "description": "Open the Transmission Web Interface with your default browser",
+      "mode": "no-view"
     }
   ],
   "preferences": [
@@ -88,6 +95,10 @@
         {
           "title": "Status",
           "value": "status"
+        },
+        {
+          "title": "Added Date",
+          "value": "addedDate"
         }
       ]
     },
@@ -139,6 +150,7 @@
     "node-fetch": "^3.2.2",
     "pretty-bytes": "^6.0.0",
     "ramda": "^0.28.0",
+    "raycast-toolkit": "^1.0.2",
     "react-dom": "^17.0.2",
     "react-use": "^17.3.2",
     "run-applescript": "^6.0.0",
