Add screenshots, changelogs and categories to my extensions (#1179)
* Doppler: Add screenshot and changelog

* Party Parrot: Add screenshot

* GitHub Repo Search: Add screenshot, changelog and categories

* Party Parrot: Add category

* Doppler: Add categories

--- a/extensions/github-repository-search/package.json
+++ b/extensions/github-repository-search/package.json
@@ -24,6 +24,9 @@
       "description": "Create a token with repository access"
     }
   ],
+  "categories": [
+    "Developer Tools"
+  ],
   "dependencies": {
     "@raycast/api": "^1.25.0",
     "javascript-time-ago": "^2.3.9",
