--- a/extensions/pokedex/package.json
+++ b/extensions/pokedex/package.json
@@ -6,7 +6,9 @@
   "icon": "icon.png",
   "author": "anhthang",
   "license": "MIT",
-  "categories": ["Fun", "Other"],
+  "categories": [
+    "Fun"
+  ],
   "commands": [
     {
       "name": "pokemon",
@@ -80,7 +82,7 @@
     }
   ],
   "dependencies": {
-    "@raycast/api": "^1.30.1",
+    "@raycast/api": "^1.30.3",
     "axios": "^0.26.0",
     "json2md": "^1.12.0",
     "lodash.groupby": "^4.6.0"
