--- a/examples/api-examples/package.json
+++ b/examples/api-examples/package.json
@@ -191,7 +191,7 @@
     }
   ],
   "dependencies": {
-    "@raycast/api": "^1.28.0",
+    "@raycast/api": "1.31.0",
     "node-fetch": "^3.0.0",
     "open": "^8.3.0"
   },
