feat [Deepcast]: add action to switch between languages (#1136)
* feat [Deepcast]: add action to switch between languages

* style [Deepcast]: run prettier

--- a/extensions/deepcast/package.json
+++ b/extensions/deepcast/package.json
@@ -5,6 +5,7 @@
   "description": "Translate words, or entire sentences, into 26 different languages using DeepL.",
   "icon": "icon.png",
   "author": "mooxl",
+  "contributors": ["peter-gy"],
   "license": "MIT",
   "commands": [
     {
