--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -109,7 +109,7 @@
 /extensions/google-trends                            @kkange
 /extensions/grafana                                  @Lp-Francois
 /extensions/graphcdn                                 @mathieudutour
-/extensions/hacker-news                              @thomaspaulmann
+/extensions/hacker-news                              @thomaspaulmann @sxn
 /extensions/harvest                                  @eluce2
 /extensions/hashnode                                 @dpnick
 /extensions/hazeover                                 @ratoru
