--- a/extensions/bitwarden/package.json
+++ b/extensions/bitwarden/package.json
@@ -7,7 +7,8 @@
   "author": "pomdtr",
   "contributors": [
     "daniel-stoneuk",
-    "jomifepe"
+    "jomifepe",
+    "dre"
   ],
   "license": "MIT",
   "keywords": [
