--- a/extensions/laravel-forge/package.json
+++ b/extensions/laravel-forge/package.json
@@ -5,6 +5,9 @@
   "description": "View and manage your Laravel Forge-managed servers",
   "icon": "command-icon.png",
   "author": "KevinBatdorf",
+  "contributors": [
+    "macbookandrew"
+  ],
   "license": "MIT",
   "commands": [
     {
@@ -65,6 +68,7 @@
     "@typescript-eslint/parser": "^5.7.0",
     "eslint": "^8.5.0",
     "eslint-config-prettier": "^8.3.0",
+    "prettier": "2.5.1",
     "react-devtools": "^4.22.1",
     "typescript": "^4.5.4"
   },
