--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -261,6 +261,7 @@
 /extensions/vercast                                  @gleich
 /extensions/visual-studio-code-project-manager       @MarkusLanger
 /extensions/visual-studio-code-recent-projects       @thomaspaulmann @iainsimmons
+/extensions/vuejs-documentation                      @Dpblandin
 /extensions/weather                                  @tonka3000
 /extensions/whatsapp                                 @vimtor
 /extensions/wikipedia                                @vimtor
