--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -158,6 +158,7 @@
 /extensions/myip                                     @kkange
 /extensions/nativebase-docs                          @ShubhamVerma1811
 /extensions/netlify                                  @Destiner
+/extensions/nextcloud                                @uetchy
 /extensions/node-js-evaluate                         @selfish
 /extensions/nos-news                                 @Joran-Dob
 /extensions/notion                                   @HenriChabrand
