--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -218,6 +218,7 @@
 /extensions/simpread                                 @Kenshin
 /extensions/single-disk-eject                        @johndturn
 /extensions/sketch                                   @aesign
+/extensions/slack                                    @momme-rtf
 /extensions/slack-status                             @PitNikola
 /extensions/snake                                    @tonka3000
 /extensions/solana-explorer                          @TrGiLong
