--- a/extensions/gif-search/package.json
+++ b/extensions/gif-search/package.json
@@ -21,7 +21,7 @@
         {
           "name": "giphy-apiKey",
           "type": "password",
-          "required": true,
+          "required": false,
           "title": "Giphy API Key",
           "placeholder": "Giphy API Key",
           "description": "API Key used to perform searches on Giphy. You can get one for free at https://developers.giphy.com"
@@ -37,7 +37,7 @@
         {
           "name": "tenor-apiKey",
           "type": "password",
-          "required": true,
+          "required": false,
           "title": "Tenor API Key",
           "placeholder": "Tenor API Key",
           "description": "API Key used to perform searches on Tenor. You can get one for free at https://tenor.com/gifapi"
@@ -88,6 +88,7 @@
   "dependencies": {
     "@giphy/js-fetch-api": "^4.1.2",
     "@raycast/api": "^1.30.0",
+    "date-fns": "^2.28.0",
     "node-fetch": "^3.2.1",
     "run-applescript": "^6.0.0",
     "tempy": "^2.0.0"
