F1: Try to fetch Formula1.com driver/race/constructor links. (#1234)
* F1: Try to fetch Formula1.com driver/race/constructor links.

* F1: Remove F1™ logo, update CHANGELOG.

* fix action name

--- a/extensions/f1-standings/package.json
+++ b/extensions/f1-standings/package.json
@@ -46,7 +46,9 @@
   ],
   "dependencies": {
     "@raycast/api": "^1.31.0",
-    "node-fetch": "^3.0.0"
+    "cheerio": "^1.0.0-rc.10",
+    "node-fetch": "^3.0.0",
+    "raycast-toolkit": "^1.0.3"
   },
   "devDependencies": {
     "@types/node": "~16.10.0",
