--- a/extensions/gif-search/package.json
+++ b/extensions/gif-search/package.json
@@ -81,13 +81,19 @@
         {
           "title": "Copy File to Clipboard",
           "value": "copyFile"
+        },
+        {
+          "title": "View GIF Details",
+          "value": "viewDetails"
         }
       ]
     }
   ],
   "dependencies": {
     "@giphy/js-fetch-api": "^4.1.2",
-    "@raycast/api": "^1.30.0",
+    "date-fns": "^2.28.0",
+    "@raycast/api": "^1.31.0",
+    "@saekitominaga/file-size-format": "^1.0.2",
     "date-fns": "^2.28.0",
     "node-fetch": "^3.2.1",
     "run-applescript": "^6.0.0",
