--- a/extensions/amazon-aws/package.json
+++ b/extensions/amazon-aws/package.json
@@ -7,7 +7,8 @@
   "author": "Falcon",
   "contributors": [
     "Hodglim",
-    "JonathanWbn"
+    "JonathanWbn",
+    "gebeto"
   ],
   "license": "MIT",
   "commands": [
